feat: comments sql